# poetry-book-cli

./: Cargo.toml  README.md
src/: main.rs
src/input/: mod.rs
src/input/cli/: cli_args.rs
src/input/files/: book_dir.rs  config.rs  file_utils.rs  mod.rs  preface_builder.rs
src/output/: file_writer.rs  mod.rs  write_latex.rs
