[package]
name = "poetry-book-cli"
version = "0.1.4"
authors = ["MarcoIeni"]
edition = "2018"
description = "poetry-book command line interface. Create a poetry book in latex from your terminal."
repository = "https://github.com/poetry-book/poetry-book-cli"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["poetry", "book", "poem", "verse", "latex"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
structopt = "0.3.7"
poetry-book = "0.1.3"
